src/FinancialForce Accounting/objects/AllocationFilterStructure__c.object
<CustomObject>
    <customHelpPage>codahelpallocationfilterstructure</customHelpPage>
    <description>Defines the allocation filter structure for the template.</description>
    <fields>
        <fullName>AllocationTemplate__c</fullName>
        <label>Allocation Template</label>
        <referenceTo>AllocationTemplate__c</referenceTo>
        <relationshipLabel>Allocation Filter Structures</relationshipLabel>
        <relationshipName>AllocationTemplates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DefaultFilterCriteria__c</fullName>
        <label>Default Filter Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiselect</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>FromTo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FilterPosition__c</fullName>
        <label>Filter Position</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FilterStructureType__c</fullName>
        <label>Filter Structure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>codaGeneralLedgerAccount__c</fullName>
                </value>
                <value>
                    <fullName>codaDimension1__c</fullName>
                </value>
                <value>
                    <fullName>codaDimension2__c</fullName>
                </value>
                <value>
                    <fullName>codaDimension3__c</fullName>
                </value>
                <value>
                    <fullName>codaDimension4__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Allocation Filter Structure</label>
    <nameField>
        <displayFormat>AFS{00000}</displayFormat>
        <label>Allocation Filter Structure</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Filter Structures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>